fix buttons spacing

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
   align-self: start;
   display: block;
   margin-bottom: 2rem;
-  padding: 1.6rem 4.8rem;
+  padding: 1.6rem 3.2rem;
   font-size: 1.5rem;
   text-align: center;
   text-decoration: none;
